--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2", features = ["cargo"] }
+regex = "1.6"
 reqwest = "0.11"
 tokio = { version = "1", features = ["full"] }
